<resources>
    <string name="app_name">TKJ_K6</string>
    <string name="main_btn_1">密码开门</string>
    <string name="main_btn_2">扫码开门</string>
    <string name="main_btn_3">呼叫中心</string>
    <string name="main_btn_4">呼叫住户</string>
    <string name="main_btn_5">人脸开门</string>
    <string name="main_location">智慧社区</string>

    <string name="pwd_resident">住户</string>
    <string name="pwd_express">快递</string>
    <string name="pwd_take_out">外卖</string>
    <string name="pwd_other">其他</string>

    <string name="setting_room_no">房号：</string>
    <string name="setting_card_no">卡号：</string>
    <string name="setting_pwd">密码：</string>
    <string name="setting_admin_pwd1">请输入新密码：</string>
    <string name="setting_admin_pwd2">请再次输入新密码：</string>
    <string name="setting_bluetooth_devid">设备注册ID：</string>
    <string name="setting_tikou_no">梯口号：</string>
    <string name="setting_qk_no">区口号：</string>
    <string name="setting_dev_no">设备号：</string>
    <string name="setting_enabled_cell">启用单元号：</string>
    <string name="setting_local_ip">本机IP：</string>
    <string name="setting_subnet_mask">子网掩码：</string>
    <string name="setting_gateway_ip">网关：</string>
    <string name="setting_manager_ip">管理员机：</string>
    <string name="setting_center_ip">中心服务器：</string>
    <string name="setting_media_ip">流媒体服务器：</string>
    <string name="setting_elevator_ip">电梯控制器：</string>
    <string name="setting_tikou_len">梯口号长度：</string>
    <string name="setting_room_len">房号长度：</string>
    <string name="setting_cell_len">单元号长度：</string>
    <string name="setting_room_start">起始房号：</string>
    <string name="setting_floor_count">楼层数：</string>
    <string name="setting_room_count_per_floor">每层户数：</string>
    <string name="setting_date">日期：</string>
    <string name="setting_time">时间：</string>
    <string name="setting_call_volume">通话音量：</string>
    <string name="setting_devinfo">设备信息</string>
    <string name="setting_area_no">区口号设置</string>
    <string name="setting_stair_no">梯口号设置</string>
    <string name="setting_build_no">楼栋号：</string>
    <string name="setting_unit_no">单元号：</string>

    <string-array name="setting_switch">
        <item>关闭</item>
        <item>启用</item>
    </string-array>

    <string-array name="setting_enabled">
        <item>不启用</item>
        <item>启用</item>
    </string-array>

    <string-array name="setting_enabled2">
        <item>禁用</item>
        <item>启用</item>
    </string-array>

    <string-array name="setting_lock_type">
        <item>常闭</item>
        <item>常开</item>
    </string-array>

    <string-array name="setting_lock_time">
        <item>0S</item>
        <item>3S</item>
        <item>6S</item>
        <item>9S</item>
    </string-array>

    <string-array name="setting_yesno">
        <item>否</item>
        <item>是</item>
    </string-array>

    <string-array name="setting_body_detection">
        <item>触发开屏</item>
        <item>扫码开门</item>
    </string-array>

    <string-array name="setting_pwd_mode">
        <item>简易模式</item>
        <item>高级模式</item>
    </string-array>

    <string-array name="setting_sensitivity">
        <item>高</item>
        <item>中</item>
        <item>低</item>
    </string-array>

    <string-array name="setting_theme">
        <item>黑色</item>
        <item>蓝色</item>
    </string-array>

    <string-array name="setting_qr_open_type">
        <item>扫码开门</item>
        <item>蓝牙开门器</item>
    </string-array>

    <string-array name="setting_face">
        <item>禁用</item>
        <item>启用</item>
        <item>清空人脸记录</item>
        <item>安全级别</item>
        <item>人脸活体检测</item>
    </string-array>

    <string-array name="setting_finger_print">
        <item>禁用</item>
        <item>启用</item>
        <item>添加指纹</item>
        <item>删除指纹</item>
        <item>清空指纹</item>
    </string-array>

    <string-array name="setting_face_secu_level">
        <item>高</item>
        <item>正常</item>
        <item>普通</item>
    </string-array>

    <string-array name="setting_language">
        <item>中文简体</item>
        <!--<item>中文繁體</item>-->
        <!--<item>English</item>-->
    </string-array>

    <string-array name="setting_card_num">
        <item>6位</item>
        <item>8位</item>
    </string-array>

    <string-array name="setting_device_type">
        <item>梯口</item>
        <item>区口</item>
    </string-array>

    <string-array name="setting_event_platform">
        <item>管理中心</item>
        <item>智慧云平台</item>
    </string-array>

    <!-- ================================================== -->
    <!--  setting list                                      -->
    <!-- ================================================== -->

    <string name="setting_01">卡管理</string>
    <string name="setting_0101">添加卡</string>
    <string name="setting_0102">删除卡</string>
    <string name="setting_0103">清空卡</string>

    <string name="setting_02">密码管理</string>
    <string name="setting_0201">添加密码</string>
    <string name="setting_0202">删除密码</string>
    <string name="setting_0203">清空密码</string>
    <string name="setting_0204">修改管理密码</string>

    <string name="setting_03">门禁设置</string>
    <string name="setting_0301">锁属性设置</string>
    <string name="setting_030101">开锁类型</string>
    <string name="setting_030102">开锁时间</string>
    <string name="setting_0302">门状态设置</string>
    <string name="setting_030201">门状态检测</string>
    <string name="setting_030202">报警输出</string>
    <string name="setting_030203">上报中心</string>
    <string name="setting_0303">人脸识别</string>
    <string name="setting_030301">清空人脸记录</string>
    <string name="setting_030302">安全级别</string>
    <string name="setting_030303">人脸活体检测</string>
    <string name="setting_030304">IPC 地址</string>
    <string name="setting_0304">二维码开门</string>
    <string name="setting_030401">扫码开门</string>
    <string name="setting_030402">蓝牙开门器</string>
    <string name="setting_0305">指纹识别</string>
    <string name="setting_030501">添加指纹</string>
    <string name="setting_030502">删除指纹</string>
    <string name="setting_030503">清空指纹</string>
    <string name="setting_0306">人体感应</string>

    <string name="setting_04">系统设置</string>
    <string name="setting_0401">梯口号设置</string>
    <string name="setting_0402">网络设置</string>
    <string name="setting_0403">编码规则设置</string>
    <string name="setting_0404">住户设置</string>
    <string name="setting_0405">时间设置</string>
    <string name="setting_0406">声音设置</string>
    <string name="setting_040601">通话音量</string>
    <string name="setting_040602">提示音</string>
    <string name="setting_040603">按键音</string>
    <string name="setting_040604">媒体静音</string>
    <string name="setting_0407">存储卡管理</string>
    <string name="setting_040701">容量</string>
    <string name="setting_040702">格式化存储卡</string>
    <string name="setting_040703">媒体信息</string>
    <string name="setting_0408">恢复出厂</string>

    <string name="setting_05">高级设置</string>
    <string name="setting_0501">密码进门模式</string>
    <string name="setting_0502">报警参数</string>
    <string name="setting_0503">拍照参数</string>
    <string name="setting_050301">启用访客拍照</string>
    <string name="setting_050302">错误密码开门拍照</string>
    <string name="setting_050303">挟持密码开门拍照</string>
    <string name="setting_050304">呼叫中心拍照</string>
    <string name="setting_050305">人脸开门拍照</string>
    <string name="setting_050306">指纹开门拍照</string>
    <string name="setting_050307">刷卡开门拍照</string>
    <string name="setting_050308">密码开门拍照</string>
    <string name="setting_050309">扫码开门拍照</string>
    <string name="setting_050310">陌生人脸拍照</string>

    <string name="setting_0504">省电模式</string>
    <string name="setting_0505">屏保设置</string>
    <string name="setting_0506">动态密码</string>
    <!--<string name="setting_0507">界面风格</string>-->
    <string name="setting_0507">事件上报平台</string>
    <string name="setting_06">设备信息</string>
    <string name="setting_language">请选择语言</string>
    <string name="setting_card_num">请选择卡号位数</string>
    <string name="setting_device_type">请选择设备属性</string>

    <string name="clear_card_confirm">是否删除所有卡号？</string>
    <string name="clear_pwd_confirm">是否删除所有密码？</string>
    <string name="restore_factory_confirm">是否恢复出厂设置？</string>
    <string name="memory_format_confirm">是否格式化存储卡？</string>
    <string name="call_center_confirm">请确认是否呼叫中心？</string>
    <string name="clear_face_record">是否清空人脸记录？</string>
    <string name="clear_face_finger_print">是否删除所有指纹？</string>
    <string name="call_connecting">连接中&#8230;</string>
    <string name="call_no_reply">无回答</string>
    <string name="manager_center">管理中心</string>
    <string name="setting_ip">本机IP：</string>
    <string name="setting_mask">子网掩码：</string>
    <string name="setting_gateway">网关：</string>
    <string name="setting_admin">管理员机：</string>
    <string name="setting_center_server">中心服务器：</string>
    <string name="setting_media_server">流媒体服务器：</string>
    <string name="setting_elevator">电梯控制器：</string>

    <string name="setting_yes">是</string>
    <string name="setting_no">否</string>
    <string name="setting_pre_page">上一页</string>
    <string name="setting_next_page">下一页</string>
    <string name="setting_card_tip">请注意！在此进行的卡管理，只针对\n本地有效，不与中心同步</string>
    <string name="setting_finger_tip">请注意！在此进行的指纹管理，只针对\n本地有效，不与中心同步</string>
    <string name="please_scan_door">请扫码开门</string>

    <string name="qr_tip_1">门开了,请"\n"进入！</string>
    <string name="qr_tip_2">无效二维"\n"码!</string>
    <string name="qr_tip_3">过期二维"\n"码!</string>

    <string name="setting_tkh">梯口号：</string>
    <string name="setting_qkh">区口号：</string>
    <string name="setting_touch_screen">触发开屏</string>

    <string name="finger_print_tip1">开始第[1]次采集指纹</string>
    <string name="finger_print_tip2">开始第[2]次采集指纹</string>
    <string name="finger_print_tip3">开始第[3]次采集指纹</string>
    <string name="finger_print_tip4">请按手指</string>
    <string name="finger_print_tip5">请按抬起手指</string>
    <string name="finger_print_tip6">手指按压正常</string>

    <string name="setting_local_memory">本地容量</string>
    <string name="setting_external_memory">SD卡容量</string>
    <string name="setting_reset_memory">格式化存储卡</string>
    <string name="setting_media_info">媒体信息</string>

    <string name="setting_rtsp_url">IPC 地址：</string>


</resources>
