<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_20">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="@dimen/dp_320"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                >

                <TextView
                    style="@style/set_main_tv_style"
                    android:text="@string/setting_03" />

                <ImageView
                    style="@style/set_img_arrow_style"/>

                <TextView
                    style="@style/set_main_tv_style"
                    android:text="@string/setting_0304" />

                <ImageView
                    style="@style/set_img_arrow_style"/>

                <TextView
                    style="@style/set_main_tv_style"
                    android:text="@string/setting_030402" />


            </LinearLayout>

            <include layout="@layout/horizontal_line_layout" />


        </LinearLayout>

        <com.mili.smarthome.tkj.view.SetOperateView
            android:id="@+id/rootview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="@dimen/dp_256"
                android:layout_height="@dimen/dp_100"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/set_input_tv_style"
                        android:text="@string/setting_bluetooth_devid" />

                    <com.mili.smarthome.tkj.widget.NumInputView
                        android:id="@+id/tv_devid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:maxLength="8"
                        app:textColor="@color/txt_white"
                        app:textSize="@dimen/sp_12" />

                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/horizontal_line_layout" />

            <include layout="@layout/set_keyboard_layout" />

        </com.mili.smarthome.tkj.view.SetOperateView>

    </LinearLayout>

    <include layout="@layout/common_back_layout" />

</FrameLayout>