<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_20">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/set_main_tv_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/setting_media_info" />

        <include layout="@layout/horizontal_line_layout" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/dp_15"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_pre_page"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_35"
            android:gravity="center"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/sp_12"
            android:text="@string/setting_pre_page"
            android:background="@drawable/set_btn_style"/>

        <TextView
            android:id="@+id/tv_next_page"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_35"
            android:gravity="center"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/sp_12"
            android:text="@string/setting_next_page"
            android:layout_marginLeft="@dimen/dp_50"
            android:background="@drawable/set_btn_style"/>

    </LinearLayout>

    <include layout="@layout/common_back_layout" />


</FrameLayout>