<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_320"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@id/lin_title"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/set_main_tv_style"
                android:text="@string/setting_04" />

            <ImageView
                style="@style/set_img_arrow_style"/>

        </LinearLayout>


        <TextView
            android:layout_gravity="left"
            android:id="@+id/tv_title"
            android:text="@string/setting_0402"
            style="@style/set_main_tv_style"
            />
    </LinearLayout>

    <include layout="@layout/horizontal_line_layout" />

    <com.mili.smarthome.tkj.view.SetOperateView
        android:id="@+id/rootview"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="@dimen/dp_256"
            android:layout_height="@dimen/dp_110"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_left_name"
                style="@style/set_input_tv_style"
                android:text="@string/setting_local_ip" />

            <com.mili.smarthome.tkj.widget.FormatInputView
                android:id="@+id/tv_local_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:format="ip"
                app:textColor="@color/txt_white"
                app:textSize="@dimen/sp_13" />


        </LinearLayout>

        <include layout="@layout/horizontal_line_layout" />

        <include layout="@layout/set_keyboard_layout" />


    </com.mili.smarthome.tkj.view.SetOperateView>



</LinearLayout>